--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,13 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Robert Fleming's Awesome CIT 480 Blog
-email: your-email@example.com
+email: robert.fleming.899@my.csun.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  My blog for all CIT 480 related assignements
+  My blog for all CIT 480 related assignments
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  robertfleming448
 
 # Build settings
 theme: jekyll-theme-hacker
