--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ twitter_username: jekyllrb
 github_username:  robertfleming448
 
 # Build settings
-theme: jekyll-theme-midnight
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
